<resources>
    <string name="app_name">TRUsell</string>
    <string name="sell_someting">Sell Someting!</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="email_address">email address</string>

</resources>
