<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_sell"
        android:title="@string/sell_someting"
        android:icon="@drawable/sell"
        >
    </item>

    <item android:id="@+id/nav_home"
    android:title="@string/home"
        android:icon="@drawable/home">
    </item>
    <item android:id="@+id/nav_friends"
    android:title="@string/contacts"
        android:icon="@drawable/contacts">
    </item>
    <item android:id="@+id/nav_search"
    android:title="@string/search"
        android:icon="@drawable/search"
        >
    </item>
    <item android:id="@+id/nav_messages"
    android:title="@string/messages"
        android:icon="@drawable/message">


    </item>

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings">
    </item>

    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout">
    </item>
</menu>